--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,22 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <!-- Couleurs principales -->
+    <color name="colorPrimary">#3C8AE7</color>
+    <color name="colorPrimaryVariant">#2C79D3</color>
+    <color name="colorSecondary">#FFD200</color>
+
+    <!-- Couleurs de texte sur fond coloré -->
+    <color name="colorOnPrimary">#FFFFFF</color>
+    <color name="colorOnSecondary">#000000</color>
+
+    <!-- Couleurs de fond et de surface -->
+    <color name="colorBackground">#F8F9FA</color>
+    <color name="colorSurface">#FFFFFF</color>
+
+    <!-- Couleurs de texte sur fond clair -->
+    <color name="textColorPrimary">#212529</color>
+    <color name="textColorSecondary">#495057</color>
+
+    <!-- Dark mode -->
+    <color name="colorPrimaryDark">#1F2F4A</color>
+    <color name="colorSecondaryDark">#FFD700</color>
 </resources>
